Fixed applications broken layout (#356)

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,10 @@
 @import "./variables.scss";
 @import "./ufx-customise.scss";
 
+*, ::before, ::after {
+  box-sizing: content-box;
+}
+
 body button:focus {
   outline: none;
   border: none;
